preview endpoint added, downloads from oneDrive
