# src/BrowseAPI/api/swagger.yaml
@@ -90,6 +90,11 @@ paths:
         description: "Component ID specifies a component"
         required: true
         type: "string"
+      - name: "preview"
+        in: "query"
+        description: "Downloads from database"
+        required: false
+        type: "boolean"
       responses:
         200:
           description: "Success"
@@ -126,6 +131,7 @@ paths:
       - timeseries_admin_auth:
         - "admin"
       x-swagger-router-controller: "BrowseAPI"
+  
   /components/{componentID}/tags/:
     put:
       tags:
